# pickem

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: CNAME
pickem/: cli.py  db.py  forms.py  grader.py  models.py  names.py  parser.py  report.py  scores.py  season.py  sheets.py
web/: package-lock.json
web/data/: pickem.db
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/players/: page.tsx
web/src/app/players/[playerName]/: page.tsx
web/src/app/seasons/[seasonId]/: page.tsx
web/src/components/charts/: AtsChartRace.tsx  BarChartRace.tsx
web/src/components/common/: Avatar.tsx
web/src/components/layout/: Navbar.tsx
web/src/components/player/: HeadToHeadSection.tsx
web/src/components/tables/: AtsLeaderboard.tsx  StandingsTable.tsx  WeekResults.tsx
web/src/lib/: colors.ts  db.ts  types.ts
